@@ -1,4 +1,4 @@
-# dtManage Guide
+# DataTorrent Console (dtManage) Guide
 
 The DataTorrent Console (aka dtManage) is a web-based user interface that allows you to monitor and manage the DataTorrent RTS platform and applications running on your Hadoop cluster.
 
@@ -23,33 +23,48 @@ The AppFactory hosts a collection of applications and templates grouped by vario
 
 ## Launch
 
-The Launch screen lists all of the imported and uploaded packages and their applications. Applications can be launched and active instances viewed.
+The Launch page lists all of the **Applications** and [**Configurations**](application_configurations.md) available for launching, as well as offering convenient management features.
 
 ![Launch](images/dtmanage/console-launch.png)
 
-#### Launching Apps
+Two alternative views are accessible through the **Applications** and **Configurations** buttons on the top right of the page. The **Applications** view lists all the applications across all the application packages. The **Configurations** view lists all the available application configurations.
 
-To launch an app in an App Package, click on the launch button to the far right of the list. A dialog box will appear with several options: 
+The *instances* column lists all the running instances of each application or configuration. Clicking on an instance takes you to the application instance page.
 
-- **Specify a name for the running app**
-  The console will pre-populate this field with an appropriate name, but you can specify your own name. Make sure it is unique among all the applications running in the Hadoop cluster of your DataTorrent installation.
-- **Specify launch properties**
-  In addition to choosing a config file, you may also directly specify properties in the launch pop-up by selecting this option. Any required properties will automatically show up in this section and require input. Note that there are several helpful functions when specifying custom properties:
-  - *add* - App Packages can have custom properties applied at launch time to override existing properties.
-    - *add default properties* - App Packages can also have default properties. This function will add the default properties to the list, making it easy for you to override the defaults. This button can be found clicking on the *add* button's submenu.
-  If any properties were added, the option to save the properties as a Configuration Package is activated.
-- **Use configuration file**
-  App Package config files are xml files that contain `<properties>` that get interpreted and used for launching an application. To choose one, enable the check box and choose the config file you want to use for launch.
-- **Use configuration package**
-  App Packages with a separate associated Configuration Package can be selected here. The Configuration Package will launch with its own custom properties.
-- **Specify the [scheduler queue](https://hadoop.apache.org/docs/r2.4.1/hadoop-yarn/hadoop-yarn-site/CapacityScheduler.html)**
-  This input allows you to specify which queue you want the application to be launched under. The default behavior depends on your Hadoop installation, but typically will be `root.[USER_NAME]`.
-- **Enable [Garbage Collection logging](http://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/index.html)**
-  Checking this box enables GC logging by including the `-Xloggc:<LOG_DIR>/gc.log -verbose:gc -XX:+PrintGCDateStamps` JVM options for all the containers of the application. This GC logging in turn enables garbage collection widgets described later.
 
-![Launch app modal](images/dtmanage/console-launch-app.png)
+### Uploading Packages and Configurations
 
-> **Note:** For more information about config files and custom properties, see the [Application Packages Guide](https://www.datatorrent.com/docs/guides/ApplicationDeveloperGuide.html)
+To upload an application package (.apa), use the **upload package** button in the **Applications** view. To upload an application configuration (.apc), use the **upload configuration** button in the **Configurations** view.
+
+
+### Launching Applications and Configurations
+
+Applications and configurations can be launched using the **launch** button in the *actions* column. This opens a launch modal where you can confirm whether to **Launch** or **Configure** the application.
+
+*Note*: Some applications and configurations must be configured before launching because they have incomplete required properties.
+
+When using the **Configure** button in the *Launch Application* modal, a temporary configuration is used. Temporary configurations are useful for launching and testing quickly without creating extra configurations. Read more about [temporary configurations](/application_configurations#launching-quickly-with-temporary-configurations) on the main Application Configurations page.
+
+
+#### Launch Dropdown
+
+The dropdown menu to the right of the **launch** button contains some convenient management actions and alternative launch options.
+
+![Launch Dropdown](images/dtmanage/console-launch-dropdown.png)
+
+When working with **Applications**, the dropdown provides quick access to related configurations, ability to launch with configuration xml files, and some package management actions.
+
+When working with **Configurations**, the dropdown provides configuration management actions, links to related configurations, and source management actions.
+
+
+#### Retargeting Multiple Configurations
+
+Multiple configurations can have their source applications retargeted at the same time. This is useful when working with a new application version and you want to migrate a set of existing configurations.
+
+To start, select all of the configurations you want to retarget using the selection checkboxes, then click the **retarget** button that shows up above the configurations list.
+
+In the modal, select a new target source application, confirm your changes, and click **Retarget**.
+
 
 
 ## Visualize
@@ -63,11 +78,25 @@ The Monitor section of the Console can be used to monitor, troubleshoot, and man
 
 ### Cluster Overview
 
-The Cluster Overview page shows overall cluster statistics as well as a list of running DataTorrent applications.
+The operations home page shows overall cluster statistics as well as a list of running DataTorrent applications.
 
-![Cluster Overview Page](images/dtmanage/console-monitor-home.png)
+![Operations Home Page](images/dtmanage/console-monitor-home.png)
 
-The cluster statistics include some performance statistics and memory usage information. As for the application list, take note of: **ended apps** This includes all the ended applications that are still in the resource manager history.
+The CPU/Memory section shows the cpu cores and memory usage statistics.  The sample above shows that Apex applications are currently using `10.48 cores` and `788 GB` of memory, and that at one time memory usage peaked at `991.5 GB`.
+
+The Applications section shows counts of all current application states.  The sample image shows there are `6 running` applications and `0 pending`.  It is important that the `pending` count does not continually show a value other than zero, which may indicate that the cluster lacks available cpu/memory resources to start a new application.
+
+The Performance section shows current statistics such as container and operator counts, tuples processed per seconds and tuples emitted per seconds across all Apex applications.
+
+The Issues section shows warning and error counts.  The count style changes to a clickable button if the value is nonzero.  Additional details about the errors and warnings may be viewed by clicking the error or warning count buttons, or by navigating to the [System Information](#system-information) section.
+
+The Services section shows the current running/failed/stopped services.  Only states with nonzero values are shown.  The image above shows there are `7 running` services.
+
+Below the cluster overview is a list of running applications.  In this list each column has a filter input just below the header which is useful for locating specific applications when there is a large number of applications running.  Clicking on individual column headers will sort the rows by that column value.  Clicking on a specific application id or name will take you to the instance page for that application (see below).
+
+Selecting the **ended apps** button will include all ended applications that are still in the resource manager history.
+
+Notice the **services** designation on the _ato-online-analytics-service_ and _fpa-online-analytics-service_ applications in the image above.  These are Apex applications running as services.  For more details on services, refer to the [Services](services.md) section.
 
 ### Instance Page
 
@@ -88,6 +117,10 @@ All the default dashboard tabs have this widget. It contains basic information r
 ![shutdown and kill buttons](images/dtmanage/console-instance-kill-shutdown.png)
 
 The “shutdown” function tries to gracefully stop the application, while “kill” forces the application to end. In either case, you will need to confirm your action.
+
+**Note**: You should not shutdown or kill an Apex application which is running as a service.  If you want to terminate such an application, then you should stop or delete the service.  For more details on stopping and deleting services, refer to the [Services](services.md) section. 
+
+The **AM logs** button shows you a dropdown menu where you may find the App Master logs, application log and GC log.  Selecting one of the menu options will take you to the log page where you can analyze the logs.  See the [Viewing Logs](#viewing-logs) section for more details.
 
 You can also use the **set logging level** button on this widget to specify what logging level gets written to the dt.log files. 
 
@@ -114,7 +147,22 @@ This widget visualizes the logical plan of the application being viewed:
 
 ![](images/dtmanage/logical-dag.png)
 
-Additionally, you can cycle through various metrics aggregated by logical operator. In the screenshot above, processed tuples per second and emitted tuples per second are shown. 
+Additionally, by selecting alternatives from the "Top" and "Bottom" dropdowns, you can cycle through
+various metrics aggregated by the logical operators. In the screenshot above, processed tuples per
+second and emitted tuples per second are shown.
+
+The rectangle near the bottom right with a miniature representation of the DAG is a scrolling aid and
+is useful when the DAG is very large and does not fit in its entirety in the browser window: You can
+pan (i.e. shift the viewport) to a particular area of the DAG by moving the grey box with your pointer
+to the corresponding area of the mini-DAG.
+
+Clicking on the "Critical Path" checkbox, you can enable highlighting of the path of the longest
+latencies highlighted in red:
+
+![](images/dtmanage/CriticalPath.png)
+
+Similarly, clicking on the "Stream Locality" checkbox will draw the streams with different dot patterns
+to distinguish the different localities chosen.
 
 >**Pro tip:** Hold the alt/option key while using your mouse scroll wheel to zoom in and out on the DAG.
 
@@ -136,11 +184,22 @@ One nice feature specific to this widget is the ability to set the logging level
 
 #### Physical Operators List Widget
 
-Shows the physical operators in the application.
+Shows the physical operators in the application and, for each operator, also shows the container
+running it. The value in the "container" column is a clickable link which takes you to the page
+for that container. The same link is also present in the "id" column of the "Containers" widget
+described next.
 
 #### Containers List Widget
 
-Shows the containers in the application. From this widget you can: select a container and go to one of its logs, fetch non-running containers and view information about them, and even kill selected containers.
+Shows the containers in the application. Selecting a container by clicking on the checkbox
+will trigger the display of additional buttons which allow you to retrieve logs, fetch info for
+containers that have already terminated, retrieve a stack dump, or kill selected containers:
+
+![](images/dtmanage/ContainerButtons.png)
+
+The Application Master container is the one whose container id ends with `_000001`.  The `AppMaster` label is shown to the right of the id, as shown in the above screenshot. The entries in the id column are clickable links that take you to the page for a specific container, showing the physical operators hosted in it and the relevant statistics:
+
+![](images/dtmanage/PhysicalOperators.png)
 
 #### Logical Streams List Widget
 
@@ -152,7 +211,7 @@ Shows various metrics of your application on a real-time line chart. Single-clic
 
 #### Garbage Collection (GC) Chart by Heap
 
-This chart shows a container's heap memory in use in KB (kilo-bytes) against time. The chart is constructed by plotting and extrapolating in-use heap memory obtained from events in the GC log file of a container which requires GC logging to be enabled as described in [Launching apps](#launching-apps). The chart shown is for a single container that is selectable from the radio buttons shown at the top right corner of the widget. Each container in the radio buttons and the chart is color-coded with the same color. The containers included depend on the context of the widget:
+This chart shows a container's heap memory in use in KB (kilo-bytes) against time. The chart is constructed by plotting and extrapolating in-use heap memory obtained from events in the GC log file of a container which requires GC logging to be enabled as described in [Application Configurations](/application_configurations#optional-properties). The chart shown is for a single container that is selectable from the radio buttons shown at the top right corner of the widget. Each container in the radio buttons and the chart is color-coded with the same color. The containers included depend on the context of the widget:
 
 - all application containers in the application view
 - all the containers containing the physical partitions of a logical operator in the logical operator view
@@ -163,7 +222,7 @@ This chart shows a container's heap memory in use in KB (kilo-bytes) against tim
 
 #### Garbage Collection (GC) Log Table
 
-This table shows the garbage collection (GC) events for a group of containers. This table too requires GC logging to be enabled as described in [Launching apps](#launching-apps). The containers included in the group depend on the context of the widget:
+This table shows the garbage collection (GC) events for a group of containers. This table too requires GC logging to be enabled as described in [Application Configurations](/application_configurations#optional-properties). The containers included in the group depend on the context of the widget:
 
 - all application containers in the application view
 - all the containers containing the physical partitions of a logical operator in the logical operator view
@@ -174,7 +233,7 @@ This table shows the garbage collection (GC) events for a group of containers. T
 
 #### Garbage Collection (GC) Chart by Duration
 
-This discrete bar chart shows GC event duration in seconds against time for a group of containers. Each bar is of fixed-width but the height denotes the duration of the corresponding GC event. This chart too requires GC logging to be enabled as described in [Launching apps](#launching-apps). One or more containers are selectable from the radio buttons shown at the top right corner of the widget. Each container in the radio buttons and the chart is color-coded with the same color. The containers included depend on the context of the widget:
+This discrete bar chart shows GC event duration in seconds against time for a group of containers. Each bar is of fixed-width but the height denotes the duration of the corresponding GC event. This chart too requires GC logging to be enabled as described in [Application Configurations](/application_configurations#optional-properties). One or more containers are selectable from the radio buttons shown at the top right corner of the widget. Each container in the radio buttons and the chart is color-coded with the same color. The containers included depend on the context of the widget:
 
 - all application containers in the application view
 - all the containers containing the physical partitions of a logical operator in the logical operator view
@@ -191,6 +250,7 @@ There is a mechanism called tuple recording that can be used to easily look at t
 
 >**Pro tip:** Select multiple tuples by holding down the shift key.
 
+<a name="viewing-logs">
 ### Viewing Logs
 
 Another useful feature of the Console is the ability to view container logs of a given application. To do this, select a container from the Containers List widget (default location of this widget is in the “physical” dashboard). Then click the logs dropdown and select the log you want to look at:
@@ -215,7 +275,6 @@ To access the application package listing, click on the "Apps" link from the Dev
 
 - Download the app package
 - Delete the app package
-- Create a new application in an application package via dtAssemble (requires enterprise license)
 - Launch applications in the app package
 
 > **Note:** If authentication is enabled, you may not be able to see others’ app packages, depending on your permissions.
@@ -234,19 +293,21 @@ All DataTorrent applications are made up of operators that connect together via 
 
 ![DAG View](images/dtmanage/console-dag-view.png)
 
-
-### Creating apps with dtAssemble
-
-If you have an Enterprise license, you will have access to the dtAssemble tool. Using this tool is outside the scope of this guide, but check out the [dtAssemble guide](http://docs.datatorrent.com/dtassemble/).
-
-
-
-
 ## Configure
 
-The RTS configuration menu is accessed by the cog button on the top-right corner of the Console. Under the **configuration** section, there are links to various tools to help you configure and troubleshoot your DataTorrent installation. The available menu items may differ depending on your security settings.
+The RTS configuration menu is accessed by the cog button on the top-right corner of the Console. Under the **System Configuration** section, there are links to various tools to help you configure and troubleshoot your DataTorrent installation. The available menu items may differ depending on your security settings.
 
 ![](images/dtmanage/console-config-system-screen.png)
+
+### System Information
+
+This page displays details of the following:
+* Gateway Information - Displays all the details of the gateway properties that are configured in the current DT RTS installation.
+* Hadoop Information - Displays the details of Hadoop properties that are configured in the current DT RTS installation.
+* Phone Home Information - Displays the data from the current DT RTS installation, such as usage statistics, which is dynamically aggregated over the time period of 24 hours and sent to the DT servers. The data is aggregated in total time frames that is it includes data from the start of the gateway installation to present.
+
+![System Configuration Page](images/dtmanage/console-system-screen2.png)
+
 
 ### System Configuration
 
@@ -261,7 +322,7 @@ In addition, you can perform the following actions from this page:
   * Usage Reporting - If enabled, your DataTorrent installation will send various pieces of information such as bug reporting and usage statistics back to our servers.
   * Installation Wizard - Rerun the initial installation to reconfigure HDFS installation path and Hadoop executable.
 
-### Security Configuration
+### Security 
 
 By default, your installation starts with no security enabled, which may be sufficient on a closed network with a limited set of users. However, it is recommended to use some form of authentication especially for production environments.
 
@@ -269,7 +330,12 @@ By default, your installation starts with no security enabled, which may be suff
 
 DataTorrent RTS supports various authentication methods which can be enabled by following instructions in the [Authentication](dtgateway_security/#authentication) section.
 
-### System Alerts
+### Services
+Services represent global, shared, and automatically managed processes. These processes are automatically installed, managed, and monitored by the Gateway, and can be an instance of an Apex application or a Docker container. Applications can rely on any number of services as their dependencies, and all the required services will be automatically installed and launched as needed when the application starts.  For more details refer to the [Services](services.md) section.
+
+![Services](images/services/services-list.png)
+
+### Alerts
 
 System alerts can be configured to notify users through the Console and emails based on various system and application metrics.
 
@@ -311,7 +377,7 @@ You can click on the "Javascript Code" tab to see the generated JavaScript expre
 You can generate a test email to validate your alert by checking the "Send Test Email" check-box and clicking on the blue "Test" button. The test email is sent regardless of the true or false result
 of the JavaScript condition, if the evaluation has no errors provided SMTP is configured as described in the Alerts section.
 
-### License Information
+### License 
 
 Use the License Information page to view how much of your DataTorrent license capacity your cluster is consuming as well as what capabilities your license permits. You can also upload new license files here.
 
@@ -330,7 +396,7 @@ The User Profile page displays information about the current user, including the
 
 ### User Management
 
-Use this page to manage users and roles of your DataTorrent cluster:
+Use this page to manage users and their corresponding roles on your DataTorrent cluster. This page is accessible only to an admin user. You can do the following from this page:
 
 *   Add users
 *   Change users’ roles
@@ -350,12 +416,13 @@ The first time you open the Console, after installing DataTorrent RTS on your cl
 
 * Location of the Hadoop executable
 * DFS location where all the DataTorrent files are stored
+* Docker configuration
 * DataTorrent license
 * Summary and review of any remaining configuration items
 
 At any time, you can go back to the installation wizard from the Configuration Tab. It can help diagnose issues and reconfigure your cluster and gateway.
 
-![](images/dtmanage/hadoop-config-screenshot.png)
+![](images/dtmanage/config-screenshot.png)
 
 When your Hadoop cluster has security enabled with Kerberos, there will be four additional controls in the installation wizard: 
 
@@ -367,6 +434,4 @@ When your Hadoop cluster has security enabled with Kerberos, there will be four 
 
 > **Note:** The token lifetime values you enter will not actually set these values in your hadoop configuration, it is only meant to inform the DataTorrent platform of these values.
 
-
-
-
+Docker configuration is optional.  For more details, refer to the [Docker Configuration](services.md#configuring-docker) section.
